--- a/slope/TemplateData/style.css
+++ b/slope/TemplateData/style.css
@@ -18,5 +18,5 @@ body {margin: 0; padding: 0}.webgl-content * {border: 0; margin: 0; padding: 0}
 .webgl-content .footer .fullscreen {background-image: url('fullscreen.png'); width: 38px; float: right;}
 
 	* {
-		background-color: #2C3547;
+		background-color: #355C7D;
 	}
